# cinder

./: .clang-format  .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  CMakePresets.json  CODEGEN_INTEGRATION_PLAN.md  Makefile  README.md  SYNTAX.md  Snippets.md  TODO.md  compile_commands.json  main.ll  main.ru  namepsaced_mods.md  source.ll  test  test.changeme  test.ll
.cache/clangd/index/: JIT.cpp.A752A1EFB06F844F.idx  JIT.hpp.00E22B1EE510F814.idx  common.hpp.A02DC4B40447C433.idx  compiler.cpp.78E191E883D5C91C.idx  compiler.hpp.E5537BE5F866F027.idx  cxxopts.hpp.4E4B09C70146D156.idx  expr.cpp.D3027FDD40196BE1.idx  expr.hpp.0C275AE91B3DA0D8.idx  lexer.cpp.C0D00AF59B324033.idx  lexer.hpp.D85DB42BB50EEAA1.idx  main.cpp.CF2E636602DD801B.idx  parser.cpp.B6C2E4B559A20825.idx  parser.hpp.FB1A625B91629715.idx  stmt.cpp.D271E6ABEAB3BC0E.idx  stmt.hpp.F28413A590110548.idx  tokens.hpp.2AE2B8FF647C470A.idx
change_me/: CMakeLists.txt
change_me/include/: JIT.hpp  common.h  common.hpp  compiler.hpp  cxxopts.hpp  errors.hpp  expr.hpp  lexer.h  lexer.hpp  libc.hpp  module_builder.hpp  parser.hpp  scope.hpp  semantic_analyzer.hpp  semantic_scope.hpp  stmt.hpp  symbol_table.hpp  tokens.h  tokens.hpp  type_context.hpp  types.hpp  utils.hpp
change_me/include/no_name_lang/ast/: expr.hpp  stmt.hpp  types.hpp
change_me/include/no_name_lang/codegen/: codegen_bindings.hpp  codegen_context.hpp  compiler.hpp
change_me/include/no_name_lang/frontend/: lexer.hpp  parser.hpp  tokens.hpp
change_me/include/no_name_lang/semantic/: semantic_analyzer.hpp  semantic_scope.hpp  symbol.hpp  type_context.hpp
change_me/include/no_name_lang/support/: diagnostic.hpp  utils.hpp
change_me/src/: CMakeLists.txt  JIT.cpp  compiler.cpp  errors.cpp  expr.cpp  lexer.c  lexer.cpp  main.c  main.cpp  module_builder.cpp  parser.cpp  scope.cpp  semantic_analyzer.cpp  semantic_scope.cpp  stmt.cpp  symbol_table.cpp  type_context.cpp
change_me/src/ast/: CMakeLists.txt  expr.cpp  stmt.cpp
change_me/src/cli/: CMakeLists.txt  main.cpp
change_me/src/codegen/: CMakeLists.txt  codegen_context.cpp  compiler.cpp
change_me/src/frontend/: CMakeLists.txt  lexer.cpp  parser.cpp
change_me/src/semantic/: CMakeLists.txt  semantic_analyzer.cpp  semantic_scope.cpp  symbol.cpp  type_context.cpp
change_me/src/support/: CMakeLists.txt  diagnostic.cpp  errors.cpp
cinder/: CMakeLists.txt
cinder/include/cinder/ast/: ast_dumper.hpp  expr.hpp  stmt.hpp  types.hpp
cinder/include/cinder/ast/expr/: expr.hpp
cinder/include/cinder/ast/stmt/: stmt.hpp
cinder/include/cinder/codegen/: codegen.hpp  codegen_bindings.hpp  codegen_context.hpp  codegen_opts.hpp  debug_info_context.hpp
cinder/include/cinder/driver/: clang_driver.hpp
cinder/include/cinder/frontend/: lexer.hpp  module_loader.hpp  parser.hpp  tokens.hpp
cinder/include/cinder/semantic/: semantic_analyzer.hpp  semantic_env.hpp  symbol.hpp  type_context.hpp
cinder/include/cinder/support/: ast_dumper.hpp  diagnostic.hpp  environment.hpp  error_category.hpp  errors.hpp  raw_outstream.hpp  utils.hpp
cinder/src/: CMakeLists.txt
cinder/src/ast/: CMakeLists.txt  ast_dumper.cpp  expr.cpp  stmt.cpp  types.cpp
cinder/src/ast/expr/: CMakeLists.txt  expr.cpp
cinder/src/ast/stmt/: CMakeLists.txt  stmt.cpp
cinder/src/cli/: CMakeLists.txt  main.cpp
cinder/src/codegen/: CMakeLists.txt  codegen.cpp  codegen_bindings.cpp  codegen_context.cpp  codegen_opts.cpp  debug_info_context.cpp
cinder/src/driver/: CMakeLists.txt  clang_driver.cpp
cinder/src/frontend/: CMakeLists.txt  lexer.cpp  module_loader.cpp  parser.cpp  tokens.cpp
cinder/src/semantic/: CMakeLists.txt  semantic_analyzer.cpp  semantic_env.cpp  symbol.cpp  type_context.cpp
cinder/src/support/: CMakeLists.txt  ast_dumper.cpp  diagnostic.cpp  environment.cpp  error_category.cpp  errors.cpp  raw_outstream.cpp
llvm_gen_c/: test.c  test.h
tests/: CMakeLists.txt  bad_op.ci  base.ci  fib.ci  lexer_test.cpp  math.ci  parser_qualified_types_test.cpp  semantic_qualified_types_test.cpp  test.ci
