cmake_minimum_required(VERSION 3.21)

project(cinder LANGUAGES C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

option(CINDER_ENABLE_CLANG_TIDY "Enable clang-tidy during build" OFF)
if(CINDER_ENABLE_CLANG_TIDY)
  find_program(CLANG_TIDY_EXE NAMES clang-tidy)
  if(CLANG_TIDY_EXE)
    set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE}")
  else()
    message(WARNING "CINDER_ENABLE_CLANG_TIDY is ON, but clang-tidy was not found")
  endif()
endif()

message(STATUS "")
message(STATUS "=== cinder build diagnostics ===")
message(STATUS "Generator: ${CMAKE_GENERATOR}")
message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
message(STATUS "Source dir: ${CMAKE_SOURCE_DIR}")
message(STATUS "Binary dir: ${CMAKE_BINARY_DIR}")
message(STATUS "C compiler: ${CMAKE_C_COMPILER} (${CMAKE_C_COMPILER_ID} ${CMAKE_C_COMPILER_VERSION})")
message(STATUS "CXX compiler: ${CMAKE_CXX_COMPILER} (${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION})")
message(STATUS "CXX standard: ${CMAKE_CXX_STANDARD}")
message(STATUS "Export compile commands: ${CMAKE_EXPORT_COMPILE_COMMANDS}")
if(CMAKE_CXX_CLANG_TIDY)
  message(STATUS "clang-tidy: ${CMAKE_CXX_CLANG_TIDY}")
else()
  message(STATUS "clang-tidy: disabled")
endif()

if(CMAKE_CXX_COMPILER_TARGET)
  message(STATUS "CXX compiler target: ${CMAKE_CXX_COMPILER_TARGET}")
endif()

if(CMAKE_OSX_SYSROOT)
  message(STATUS "OSX sysroot: ${CMAKE_OSX_SYSROOT}")
endif()

if(CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES)
  message(STATUS "CXX implicit include dirs:")
  foreach(dir IN LISTS CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES)
    message(STATUS "  - ${dir}")
  endforeach()
endif()

if(CMAKE_EXPORT_COMPILE_COMMANDS)
  set(CINDER_COMPILE_COMMANDS_LINK "${CMAKE_SOURCE_DIR}/compile_commands.json")
  if(NOT EXISTS "${CINDER_COMPILE_COMMANDS_LINK}")
    file(CREATE_LINK "${CMAKE_BINARY_DIR}/compile_commands.json" "${CINDER_COMPILE_COMMANDS_LINK}" SYMBOLIC)
    message(STATUS "Created compile_commands.json symlink at: ${CINDER_COMPILE_COMMANDS_LINK}")
  elseif(IS_SYMLINK "${CINDER_COMPILE_COMMANDS_LINK}")
    message(STATUS "compile_commands.json symlink already present: ${CINDER_COMPILE_COMMANDS_LINK}")
  else()
    message(WARNING "${CINDER_COMPILE_COMMANDS_LINK} exists and is not a symlink; clangd may use stale commands")
  endif()

  message(STATUS "compile_commands.json path: ${CMAKE_BINARY_DIR}/compile_commands.json")
endif()
message(STATUS "=== end diagnostics ===")
message(STATUS "")

add_subdirectory(cinder)
