cmake_minimum_required(VERSION 3.21)

if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
  project(cinder LANGUAGES C CXX)
  set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
  set(CMAKE_CXX_STANDARD 20)
  set(CMAKE_CXX_STANDARD_REQUIRED ON)
  set(CMAKE_CXX_EXTENSIONS OFF)

  message(STATUS "")
  message(STATUS "=== cinder build diagnostics ===")
  message(STATUS "Generator: ${CMAKE_GENERATOR}")
  message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
  message(STATUS "Source dir: ${CMAKE_SOURCE_DIR}")
  message(STATUS "Binary dir: ${CMAKE_BINARY_DIR}")
  message(STATUS "C compiler: ${CMAKE_C_COMPILER} (${CMAKE_C_COMPILER_ID} ${CMAKE_C_COMPILER_VERSION})")
  message(STATUS "CXX compiler: ${CMAKE_CXX_COMPILER} (${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION})")
  message(STATUS "CXX standard: ${CMAKE_CXX_STANDARD}")
  message(STATUS "Export compile commands: ${CMAKE_EXPORT_COMPILE_COMMANDS}")

  if(CMAKE_CXX_COMPILER_TARGET)
    message(STATUS "CXX compiler target: ${CMAKE_CXX_COMPILER_TARGET}")
  endif()

  if(CMAKE_OSX_SYSROOT)
    message(STATUS "OSX sysroot: ${CMAKE_OSX_SYSROOT}")
  endif()

  if(CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES)
    message(STATUS "CXX implicit include dirs:")
    foreach(dir IN LISTS CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES)
      message(STATUS "  - ${dir}")
    endforeach()
  endif()

  if(CMAKE_EXPORT_COMPILE_COMMANDS)
    set(CINDER_COMPILE_COMMANDS_LINK "${CMAKE_SOURCE_DIR}/compile_commands.json")
    if(NOT EXISTS "${CINDER_COMPILE_COMMANDS_LINK}")
      file(CREATE_LINK "${CMAKE_BINARY_DIR}/compile_commands.json" "${CINDER_COMPILE_COMMANDS_LINK}" SYMBOLIC)
      message(STATUS "Created compile_commands.json symlink at: ${CINDER_COMPILE_COMMANDS_LINK}")
    elseif(IS_SYMLINK "${CINDER_COMPILE_COMMANDS_LINK}")
      message(STATUS "compile_commands.json symlink already present: ${CINDER_COMPILE_COMMANDS_LINK}")
    else()
      message(WARNING "${CINDER_COMPILE_COMMANDS_LINK} exists and is not a symlink; clangd may use stale commands")
    endif()

    message(STATUS "compile_commands.json path: ${CMAKE_BINARY_DIR}/compile_commands.json")
  endif()
  message(STATUS "=== end diagnostics ===")
  message(STATUS "")
endif()

set(CINDER_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

find_package(LLVM REQUIRED CONFIG)
find_package(Clang CONFIG QUIET)

message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

if(Clang_FOUND)
  message(STATUS "Found Clang package in: ${Clang_DIR}")
else()
  message(STATUS "Clang package not found; clang driver support disabled")
endif()

add_subdirectory(src)
